# aks-egress-checker

./: CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit-on-push.yaml  deploytoAksCluster.yml
deploy/: deploy.yaml  egress-data.configmap.yaml
egress-data/: 20220315-egress.json  21vianet-app-required.json  21vianet-net-required.json  azmonitor-app-required.json  azmonitor-net-required.json  azmonitor-network-required.json  azpolicy-21vianet-app-required.json  azpolicy-app-required.json  azpolicy-usgov-app-required.json  consolidated-egress.json  csi-secrets-store-app-required.json  defender-app-required.json  global-app-optional.json  global-app-required.json  global-net-required.json  gov-net-required.json  gpu-app-required.json  k8s-ext-app-required.json  k8s-ext-gov-app-required.json  usgov-app-required.json  usgov-net-required.json  windows-app-required.json
egress-data/20220315/: 21vianet-app-required.json  21vianet-net-required.json  azpolicy-21vianet-app-required.json  azpolicy-gov-app-required.json  defender-app-required.json  ext-gov-app-required.json  global-app-optional.json  global-app-required.json  global-net-required.json  gov-app-required.json  gov-net-required.json  gpu-app-required.json  monitor-app-required.json  windows-app-required.json
egress-data/20220810/: 20220811-consolidated-egress.json
manifests/: deployment.yml  service.yml
src/: conncheck.rs  egress.rs  imds.rs  lib.rs  main.rs  telemetry.rs
src/conncheck/: test_target.rs
test/: imds_resp.json
