[package]
name = "aks-egress-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = "4.0.23"
env_logger = "0.9.3"
log = "0.4.14"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "trust-dns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = [ "full" ] }
tracing = "0.1.37"
tracing-futures = "0.2.3"
tracing-log = "0.1.2"
tracing-serde = "0.1.3"
tracing-subscriber = "0.3.16"

[dev-dependencies]
