[package]
name = "aks-egress-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = "4.0.32"
env_logger = "0.10.0"
log = "0.4.14"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "trust-dns"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tabled = "0.10.0"
tokio = { version = "1.24.1", features = [ "full" ] }
tracing = "0.1.37"
tracing-futures = "0.2.3"
tracing-log = "0.1.2"
tracing-serde = "0.1.3"
tracing-subscriber = "0.3.16"

[dev-dependencies]
criterion = "0.3"
mockall = "0.11.2"



[[bench]]
name = "full_bench"
harness = false